# GraceEngineCore

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: Build.yml  label-dispatch.yml
core/: CMakeLists.txt
core/include/: graceEngine.h  input.h  object.h
core/src/: graceEngine.cpp  input.cpp  object.cpp
